:last-update-label!:

= History

== 9.1.0
* Refined documents. #364, #365
* Made colored log selectable (by default true(colored)). #363
* Fixed misuse of bound allocator. #362
* Fixed TLS example. #361

== 9.0.2
* Added ASYNC_MQTT_BUILD_EXAMPLES_SEPARATE option to enable library separate build example. #359
* Fixed TLS timeout logic. #357
* Fixed broker auth file for docker. #356

== 9.0.1
* Fixed TLS plug out timeout logic. #355
* Refined client_cli tool. #354
* Refined bench tool. #352
* Refined docker container. #350
* Moved setup_log.hpp to `util/` (appropriate location). #349
* Refined documents. #348, #349, #351

== 9.0.0
=== breaking changes
* endpoint, basic_endpoint, and client become value based design. #346
** static member function `create()` is removed.
** constructor becomes public.
** move constructor is supported.
** you can replace `endpoint<...>::create(...)`  with `endpoint<...>{...}` for value or `std::make_shared<endpoint<...>>(...)` for shared_ptr.
* Updated timeout duration setting function parameter type as `std::chorono::milliseconds`. #342, #345
** User can pass any duration types like `std::chrono::milliseconds`, `std::chrono::seconds`, etc.
** The Mminimum resolution is milliseconds.

=== other updates
* Moved all implementations of basic_endpoint member functions to impl. #343
* Deleted unused and undefined `is_error()` function. #341
* Deleted `client` move operations. #339
* Fixed cmake warnings due to CMP0167. #338
* Removed invalid `#`. #336, #337
* Refined documents. #335, #340, #347
* Added separate compilation mode customization points. #331
* Added destructor comment for basic_endpoint and client. #330
* Refined unit_test. #328, #329
* Updated cli library. #327
* Added all RTT output mode to bench. #326
* Fixed private constructor chosen problem on publish packet. #325
* Refined tests. #322, #333, #334

== 8.0.1
* Fixed required boost version. #322
** Boost 1.84.0 or later is required.